// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceLoader does not load a transient service in dev mode 1`] = `
[
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
      "service-six",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-three",
    "name": "service-seven",
    "repository": null,
    "source": "./module-three/service-seven.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
      "service-six",
      "service-seven",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-three",
    "name": "service-eight",
    "repository": null,
    "source": "./module-three/service-eight.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
      "service-six",
      "service-seven",
      "service-eight",
      "service-eleven",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-three",
    "name": "service-nine",
    "repository": null,
    "source": "./module-three/service-seven.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-one",
    "repository": null,
    "source": "./module-one/service-one.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-two",
    "repository": null,
    "source": "./module-one/service-two.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-three",
    "repository": null,
    "source": "./module-one/service-three.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-four",
    "repository": null,
    "source": "./module-two/service-four.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-five",
    "repository": null,
    "source": "./module-two/service-five.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-six",
    "repository": null,
    "source": "./module-two/service-six.docker-compose.yaml",
  },
]
`;

exports[`ServiceLoader loads module and service, none in dev mode 1`] = `
[
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-four",
    "repository": null,
    "source": "./module-two/service-four.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-four",
    "name": "service-ten",
    "repository": null,
    "source": "./module-four/service-ten.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-one",
    "repository": null,
    "source": "./module-one/service-one.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-two",
    "repository": null,
    "source": "./module-one/service-two.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-three",
    "repository": null,
    "source": "./module-one/service-three.docker-compose.yaml",
  },
]
`;

exports[`ServiceLoader loads modules, no services enabled, none in dev mode 1`] = `
[
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
      "service-six",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-three",
    "name": "service-seven",
    "repository": null,
    "source": "./module-three/service-seven.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
      "service-six",
      "service-seven",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-three",
    "name": "service-eight",
    "repository": null,
    "source": "./module-three/service-eight.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
      "service-six",
      "service-seven",
      "service-eight",
      "service-eleven",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-three",
    "name": "service-nine",
    "repository": null,
    "source": "./module-three/service-seven.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-one",
    "repository": null,
    "source": "./module-one/service-one.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-two",
    "repository": null,
    "source": "./module-one/service-two.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-three",
    "repository": null,
    "source": "./module-one/service-three.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-four",
    "repository": null,
    "source": "./module-two/service-four.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-five",
    "repository": null,
    "source": "./module-two/service-five.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
      "service-four",
      "service-five",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-two",
    "name": "service-six",
    "repository": null,
    "source": "./module-two/service-six.docker-compose.yaml",
  },
]
`;

exports[`ServiceLoader loads services correctly when all services enabled, none in dev mode 1`] = `
[
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-two",
    "repository": null,
    "source": "./module-one/service-two.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-three",
    "repository": null,
    "source": "./module-one/service-three.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-one",
    "repository": null,
    "source": "./module-one/service-one.docker-compose.yaml",
  },
]
`;

exports[`ServiceLoader loads services in dev mode 1`] = `
[
  {
    "builder": "",
    "dependsOn": [
      "service-one",
      "service-two",
      "service-three",
    ],
    "liveUpdate": true,
    "metadata": {},
    "module": "module-two",
    "name": "service-four",
    "repository": null,
    "source": "./module-two/service-four.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": true,
    "metadata": {},
    "module": "module-four",
    "name": "service-ten",
    "repository": null,
    "source": "./module-four/service-ten.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-one",
    "repository": null,
    "source": "./module-one/service-one.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-two",
    "repository": null,
    "source": "./module-one/service-two.docker-compose.yaml",
  },
  {
    "builder": "",
    "dependsOn": [
      "service-one",
    ],
    "liveUpdate": false,
    "metadata": {},
    "module": "module-one",
    "name": "service-three",
    "repository": null,
    "source": "./module-one/service-three.docker-compose.yaml",
  },
]
`;
